--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "ganache-cli": "^6.12.2",
     "ganache-core": "^2.13.2",
     "google-maps-react": "^2.0.6",
+    "qrcode.react": "^3.1.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-router-dom": "^5.2.0",
