--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,15 @@
     "ganache-core": "^2.13.2",
     "google-maps-react": "^2.0.6",
     "qrcode.react": "^3.1.0",
-    "react": "16.11.0",
-    "react-dom": "16.11.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.2.0",
-    "web3": "1.2.2"
+    "react-scripts": "^5.0.1",
+    "web3": "1.2.2",
+    "web3.storage": "^4.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
